--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,14 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     services:
       mysql:
-        image: mysql:5.7
+        image: mysql:8.1
         env:
           MYSQL_USER: root
           MYSQL_ROOT_PASSWORD: mysql@123
           MYSQL_DATABASE: usersdb
         ports:
           - 3306:3306
+        options: --helth-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
+      - name: Configure MySQL permissions
+        run: mysql -h 127.0.0.1 --port 3306 -u root -pmysql@123 -e "ALTER USER 'root'@'%' IDENTIFIED BY 'password'; GRANT ALL PRIVILEGES ON *.* TO 'root'@'%'; FLUSH PRIVILEGES;"
       - uses: actions/checkout@v2
       - name: Use Node.js
         uses: actions/setup-node@v1
@@ -26,11 +29,9 @@ jobs:
           node-version: "18"
       - name: Install dependencies
         run: npm install
-      - name: Start MySQL
-        run: sudo /etc/init.d/mysql start
       - name: install cliente mysql
         run: sudo apt install mysql-client
       - name: create tables
-        run: sudo mysql usersdb < estrutura.sql
+        run:  mysql -h --port 3306 -u root -pmysql@123 usersdb < estrutura.sql
       - name: Run tests
         run: npm test
