--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,7 +13,7 @@ jobs:
       mysql:
         image: mysql:8.1
         env:
-          MYSQL_USER: root
+          # MYSQL_USER: root
           MYSQL_ROOT_PASSWORD: mysql@123
           MYSQL_DATABASE: usersdb
         ports:
