--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,14 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     services:
       mysql:
-        image: mysql:8.1
+        image: mysql:8.0
         env:
           # MYSQL_USER: root
           MYSQL_ROOT_PASSWORD: mysql@123
           MYSQL_DATABASE: usersdb
         ports:
           - 3306:3306
-        options: --helth-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
       - name: Configure MySQL permissions
         run: mysql -h 127.0.0.1 --port 3306 -u root -pmysql@123 -e "ALTER USER 'root'@'%' IDENTIFIED BY 'password'; GRANT ALL PRIVILEGES ON *.* TO 'root'@'%'; FLUSH PRIVILEGES;"
