--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -34,4 +34,8 @@ jobs:
       - name: create tables
         run:  mysql -h 127.0.0.1 --port 3306 -u root -pmysql@123 usersdb < estrutura.sql
       - name: Run tests
+        env: 
+            MYSQL_USER: root
+            MYSQL_ROOT_PASSWORD: mysql@123
+            MYSQL_DATABASE: usersdb
         run: npm test
