--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,6 +36,6 @@ jobs:
       - name: Run tests
         env: 
             MYSQL_USER: root
-            MYSQL_ROOT_PASSWORD: mysql@123
+            MYSQL_PASSWORD: mysql@123
             MYSQL_DATABASE: usersdb
         run: npm test
